--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [[redirects]]
-    from = "/portfolio"
-    to = "/portfolio"
-    status = 301
+    from = "/*"
+    to = "/index.html"
+    status = 200
