--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "serve": "^14.2.1"
   },
   "devDependencies": {
+    "@netlify/plugin-sitemap": "^0.8.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
@@ -32,7 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "parcel-reporter-static-files-copy": "^1.5.3",
+    "netlify-plugin-submit-sitemap": "^0.4.0",
     "vite": "^5.0.0"
   }
 }
